add test images

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,20 @@ kaggle_img/
 X/
 dataset_npy/
 blurred_img/
-cut_img/
-motion_blur_test/
-motion_blur_test_res/
+!cut_img/
+cut_img/*
+!cut_img/cut_img0.jpg
+!cut_img/cut_img4.jpg
+!cut_img/cut_img7.jpg
+!cut_img/cut_img8.jpg
+!cut_img/cut_img9.jpg
+!cut_img/cut_img10.jpg
+!motion_blur_test/
+motion_blur_test/*
+!motion_blur_test/*.jpg
+!motion_blur_test_res/
+motion_blur_test_res/*
+!motion_blur_test_res/*.jpg
 start_to_end_data/
 *.JPG
 .ipynb_checkpoints/
